--- a/site/extension/web/layout/views/layout.html
+++ b/site/extension/web/layout/views/layout.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item {% if page.page_name == 'about' %}active{% endif %}">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href="/page/about">About</a>
       </li>
     </ul>
     
