update web index page text

--- a/site/extension/web/views/web/index.html
+++ b/site/extension/web/views/web/index.html
@@ -19,7 +19,7 @@
     <div class="col-9 section-block">
       <h4 class="text-muted">Introduction</h4>
       <br/>
-      <p>Leapbase is web development platform.</p>
+      <p>Welcome to Leapbase web development platform.</p>
     </div>
   </div>
 </div>
