fix icons in admin list page

--- a/site/views/common/object_list.html
+++ b/site/views/common/object_list.html
@@ -161,12 +161,12 @@ var page = {{ page|dump(2)|safe }};
   <div class="row">
     <div class="col">
       <ul class="pagination">
-        <li id="btnFirst"><i class="glyphicon glyphicon-fast-backward" style="margin:0 5px 0 5px;"></i></li>
-        <li id="btnPrev"><i class="glyphicon glyphicon-step-backward" style="margin:0 5px 0 5px;"></i></li>
+        <li id="btnFirst"><i class="fas fa-backward" style="margin:0 5px 0 5px;"></i></li>
+        <li id="btnPrev"><i class="fas fa-step-backward" style="margin:0 5px 0 5px;"></i></li>
         <li id="itemInfo" style="margin:0 10px 0 20px;text-align: center;"></li>
         <li id="pageInfo" style="margin:0 20px 0 10px;text-align: center;"></li>
-        <li id="btnNext"><i class="glyphicon glyphicon-step-forward" style="margin:0 5px 0 5px;"></i></li>
-        <li id="btnLast"><i class="glyphicon glyphicon-fast-forward" style="margin:0 5px 0 5px;"></i></li>
+        <li id="btnNext"><i class="fas fa-step-forward" style="margin:0 5px 0 5px;"></i></li>
+        <li id="btnLast"><i class="fas fa-forward" style="margin:0 5px 0 5px;"></i></li>
       </ul>
     </div>
   </div>
